[gd_scene load_steps=21 format=2]

[ext_resource path="res://ressources/script/ui/IntroScreen.gd" type="Script" id=1]
[ext_resource path="res://ressources/fonts/ebrima.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ressources/fonts/rage_italic.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://ressources/theme/ui_btn.tres" type="Theme" id=4]
[ext_resource path="res://ressources/sound/menu/accept_sound.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=6]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.960784, 0, 1, 0.643137 )

[sub_resource type="DynamicFont" id=9]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=17]
size = 132
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0.0980392 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.968627, 0, 1, 1 )

[sub_resource type="Theme" id=18]
Button/colors/font_color = Color( 0.454902, 0.854902, 0.160784, 1 )
Button/fonts/font = SubResource( 6 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 10 )
CheckBox/fonts/font = SubResource( 9 )
Label/colors/font_color = Color( 0.847059, 0.141176, 0.486275, 1 )
Label/fonts/font = SubResource( 17 )
Panel/styles/panel = SubResource( 8 )
VScrollBar/styles/scroll = SubResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=12]
Button/colors/font_color = Color( 0.454902, 0.854902, 0.160784, 1 )
Button/fonts/font = SubResource( 6 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 10 )
CheckBox/fonts/font = SubResource( 9 )
Label/colors/font_color = Color( 0.164706, 0.666667, 0.933333, 1 )
Label/fonts/font = SubResource( 7 )
Panel/styles/panel = SubResource( 8 )
VScrollBar/styles/scroll = SubResource( 11 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.290196, 0.215686, 0.215686, 0 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.666667, 0.00784314, 0.760784, 1 )
corner_radius_top_left = 15

[sub_resource type="DynamicFont" id=14]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=15]

[sub_resource type="Theme" id=16]
default_font = SubResource( 15 )
Button/fonts/font = SubResource( 13 )
Button/styles/normal = SubResource( 2 )
Label/colors/font_color = Color( 0.772549, 0.847059, 0.141176, 1 )
Label/fonts/font = SubResource( 14 )

[node name="IntroScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.196078, 0, 0.219608, 1 )

[node name="label_main_title" type="Label" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 0.38
margin_bottom = -1.50204e-05
theme = SubResource( 18 )
text = "PinkyBall"
align = 1
valign = 1

[node name="label_title_rules" type="Label" parent="ColorRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -93.0
margin_right = 3.0
margin_bottom = -4.0
theme = SubResource( 12 )
text = "Your Mission:"

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect"]
anchor_top = 0.531
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -12.0

[node name="label_rules" type="Label" parent="ColorRect/ScrollContainer"]
margin_right = 832.0
margin_bottom = 627.0
theme = SubResource( 16 )
text = "You'll have to break faster the bricks while using items:
-Bullets
-Rocket (RC if you'll catch the command)
-Bombs will explode on impact and on an average time completed
-Plane give you the opportunity to play as character mode if you get-out,
  you'll can also fired with the plane!

Also you'll can switch gameplay mode:
	From platformer to the plane
	From the plane to platform
	From the plane to character
	From the character to platform
	From the Platform to Rocket RC
	From the Rocket RC to platform"

[node name="btn_next" type="Button" parent="ColorRect"]
anchor_left = 0.883
anchor_top = 0.932
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.192017
margin_top = -0.200025
theme = ExtResource( 4 )
text = "Next"

[node name="audiostreamplayer_sound_effect" type="AudioStreamPlayer" parent="ColorRect"]
stream = ExtResource( 5 )

[connection signal="pressed" from="ColorRect/btn_next" to="." method="_on_btn_next_pressed"]
